# RPA-Project

for_otp/: app.py  config.ini  pyproject.toml  run.bat
for_otp/PASIA/: app_details.py  launch_pasia.py  log.py  main.py
