[tool.poetry]
name = "for_otp"
version = "0.1.0"
description = ""
authors = ["mubarak321 <mubarakshaikh2611@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
keyboard = "^0.13.5"
PyAutoGUI = "^0.9.53"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
